# parallelComputing

./: .gitignore
cuda/: readme.txt
cuda/test_01/: readme.txt
cuda/test_02/: addIntNums  readme.txt
cuda/test_03/: readme.txt
cuda/test_05/: CMakeLists.txt  matrixMultil.cu  matrixMultil_v2.cu
cuda/test_06/: CMakeLists.txt  split_model.py
cuda/test_07/: CMakeLists.txt  commonDef.cpp  commonDef.h  errCode.h  generateTrt.cpp  generateTrt.h  main.cpp
cuda10.2/: readme.txt
cuda10.2/test_01/: CMakeLists.txt  cudaMsg.cuh  getCudaDeviceMsg  getCudaDeviceMsg.cu  main.cpp
cuda10.2/test_02/: addIntNums.cu
cuda10.2/test_03/: vectorAdd.cu
cuda10.2/test_04/: vectorAdd.cu
